--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -31,6 +31,7 @@ li {
 }
 
 header {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,6 +49,7 @@ nav {
     gap: 10px;
     padding: 8px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .second-nav {
