--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -68,7 +68,7 @@ nav {
 }
 
 nav a {
-    color: black;
+    color: crimson;
     font-weight: normal;
     padding: 5px 10px;
     text-decoration: none;
