--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -44,19 +44,26 @@ header {
 }
 
 nav {
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 10px;
     padding: 8px;
     width: 100%;
-    box-sizing: border-box;
+}
+
+nav span.separator {
+    font-size: 1em;
+    line-height: 1;
+    vertical-align: middle;
+    opacity: 0.8;
 }
 
 .second-nav {
-    display: inline-block;
-    border: 2px solid gray;
+    display: flex;
+    gap: 10px;
     padding: 6px 12px;
-    border-radius: 6px;
     background-color: transparent;
 }
 
@@ -68,7 +75,7 @@ nav {
 }
 
 nav a {
-    color: crimson;
+    color: black;
     font-weight: normal;
     padding: 5px 10px;
     text-decoration: none;
