--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -53,7 +53,7 @@ nav {
     width: 100%;
 }
 
-nav span.separator {
+.separator {
     font-size: 1em;
     line-height: 1;
     vertical-align: middle;
@@ -67,6 +67,10 @@ nav span.separator {
     background-color: transparent;
 }
 
+.second-nav a {
+    color: #230C0F;
+}
+
 .second-nav .spacer {
     font-size: 1em;
     line-height: 1;
@@ -75,7 +79,7 @@ nav span.separator {
 }
 
 nav a {
-    color: black;
+    color: crimson;
     font-weight: normal;
     padding: 5px 10px;
     text-decoration: none;
