--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -38,13 +38,13 @@ header {
     flex-direction: column;
     align-items: center;
     padding: 15px;
-    background-color: #d3d3d3;
+    background-color: transparent;
     width: 80%;
     margin: 20px auto;
     border-radius: 10px;
 }
 
-nav {
+.top-nav {
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -54,7 +54,7 @@ nav {
     width: 100%;
     border: 3px solid #707070;
     border-radius: 10px;
-    background-color: #e0e0e0;
+    background-color: transparent;
     margin-bottom: 10px;
 }
 
@@ -102,11 +102,7 @@ nav a:hover {
     header {
         width: 95%;
     }
-    nav {
-        flex-direction: column;
-        align-items: center;
-    }
-    .second-nav {
+    .top-nav, .second-nav {
         flex-direction: column;
         align-items: center;
     }
