--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -44,7 +44,7 @@ header {
     border-radius: 10px;
 }
 
-.top-nav {
+nav.top-nav, nav.second-nav {
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -63,15 +63,6 @@ header {
     line-height: 1;
     vertical-align: middle;
     opacity: 0.8;
-}
-
-.second-nav {
-    display: flex;
-    gap: 10px;
-    padding: 6px 12px;
-    background-color: transparent;
-    border: 3px solid #707070;
-    border-radius: 10px;
 }
 
 .second-nav a {
@@ -102,7 +93,7 @@ nav a:hover {
     header {
         width: 95%;
     }
-    .top-nav, .second-nav {
+    nav.top-nav, nav.second-nav {
         flex-direction: column;
         align-items: center;
     }
