--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -17,34 +17,18 @@ a:hover {
     text-decoration: underline;
 }
 
-img {
-    width: 40%;
-    height: auto;
-    max-width: 100%;
-}
-
-figure {
-    text-align: center;
-    font-style: italic;
-}
-
 li {
     text-align: left;
     margin-bottom: 5px;
 }
 
-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+header, .top-nav, .second-nav {
+    background-color: #b0b0b0;
     padding: 15px;
-    background-color: transparent;
-    width: 80%;
-    margin: 20px auto;
     border-radius: 10px;
 }
 
-nav.top-nav, nav.second-nav {
+nav {
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -52,10 +36,6 @@ nav.top-nav, nav.second-nav {
     gap: 10px;
     padding: 8px;
     width: 100%;
-    border: 3px solid #707070;
-    border-radius: 10px;
-    background-color: transparent;
-    margin-bottom: 10px;
 }
 
 .separator {
@@ -93,7 +73,7 @@ nav a:hover {
     header {
         width: 95%;
     }
-    nav.top-nav, nav.second-nav {
+    nav {
         flex-direction: column;
         align-items: center;
     }
