--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -3,30 +3,52 @@ body {
     font-family: monospace;
     background-color: darkgray;
     color: black;
-    margin: 0;
-    padding: 0;
 }
+
 
 a {
     color: crimson;
     text-decoration: none;
 }
 
+
 a:hover {
     color: orange;
     text-decoration: underline;
 }
+
+
+img {
+    width: 40%;
+    height: 60%;
+}
+
+
+figure {
+    text-align: center;
+    font-style: italic;
+}
+
 
 li {
     text-align: left;
     margin-bottom: 5px;
 }
 
-header, .top-nav, .second-nav {
-    background-color: #b0b0b0;
+
+header {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 15px;
+    border: 3px solid #707070;
     border-radius: 10px;
+    background-color: #d3d3d3;
+    width: 80%;
+    margin: 20px auto;
 }
+
 
 nav {
     box-sizing: border-box;
@@ -38,6 +60,7 @@ nav {
     width: 100%;
 }
 
+
 .separator {
     font-size: 1em;
     line-height: 1;
@@ -45,9 +68,19 @@ nav {
     opacity: 0.8;
 }
 
+
+.second-nav {
+    display: flex;
+    gap: 10px;
+    padding: 6px 12px;
+    background-color: transparent;
+}
+
+
 .second-nav a {
     color: #230C0F;
 }
+
 
 .second-nav .spacer {
     font-size: 1em;
@@ -55,6 +88,7 @@ nav {
     vertical-align: middle;
     opacity: 0.7;
 }
+
 
 nav a {
     color: crimson;
@@ -64,10 +98,12 @@ nav a {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+
 nav a:hover {
     background-color: gray;
     color: white;
 }
+
 
 @media (max-width: 768px) {
     header {
