--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -15,5 +15,5 @@
         ~
         <a href="carefreegoose/">Carefree Goose Bath Co.</a>
         ~
-        <a href="">Crappy Webpage</a>
+        <a href="stuff/MY PAGE@ Survey.html">Crappy Webpage</a>
     </nav>
