--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,7 +6,7 @@
         -
         <a href="contract.html">Contract</a>
         -
-        <a href="carefreegoose/">Carefree Goose Bath Co.</a>
+        <a href="website_evaluations.html">Website Evaluations</a>
         -
         <a href="byo_intro.html">Byo Intro</a>
     </nav>
