--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -16,4 +16,6 @@
         <a href="carefreegoose/">Carefree Goose Bath Co.</a>
         ~
         <a href="stuff/Mypage& Survey.htm">Crappy Webpage</a>
+        ~
+        <a href="tables.html">HTML Tables</a>
     </nav>
