--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -9,4 +9,4 @@
     -
     <a href="itis3135/">ITIS-3135</a>
 </nav>
-<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
+<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025, <a href="https://www.freecodecamp.org/certification/cjgallagher/responsive-web-design">Certified in Responsive Web Design</a></p>
