--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -9,6 +9,8 @@
         <a href="website_evaluations.html">Website Evaluations</a>
         -
         <a href="byo_intro.html">Byo Intro</a>
+        -
+        <a href="project_overview.html">Project Overview</a>
     </nav>
     <nav class="second-nav">
         <a href="hobby/">Hobby Page</a>
