--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -8,5 +8,7 @@
     <a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
     -
     <a href="itis3135/">ITIS-3135</a>
+    -
+    <a href="natureinshutterspeed/">Client Project</a>
 </nav>
 <p>Page built by <a href="collincollective.com/index.html">Collin Collective</a>&copy; 2025, <a href="https://www.freecodecamp.org/certification/cjgallagher/responsive-web-design">Certified in Responsive Web Design</a></p>
