--- a/itis3135/natureinshutterspeed/components/header.html
+++ b/itis3135/natureinshutterspeed/components/header.html
@@ -4,8 +4,8 @@
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="us_gallery.html">U.S. Gallery</a></li>
-        <li><a href="global_gallery.html">Global Gallery</a></li>
+        <li><a href="west_gallery.html">Western Gallery</a></li>
+        <li><a href="east_gallery.html">Eastern Gallery</a></li>
         <li><a href="review.html">Review</a></li>
       </ul>
     </nav>
