--- a/itis3135/natureinshutterspeed/styles/styles.css
+++ b/itis3135/natureinshutterspeed/styles/styles.css
@@ -61,6 +61,13 @@ nav ul.nav a:hover {
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
+.aboutImg {
+  max-width: 500px;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
 .gallery-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
