--- a/itis3135/natureinshutterspeed/styles/styles.css
+++ b/itis3135/natureinshutterspeed/styles/styles.css
@@ -73,6 +73,7 @@ nav ul.nav a:hover {
 .gallery-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  column-gap: 1rem;
   row-gap: 1rem;
   padding: 2rem;
   max-width: 1200px;
