--- a/itis3135/natureinshutterspeed/styles/styles.css
+++ b/itis3135/natureinshutterspeed/styles/styles.css
@@ -47,7 +47,7 @@ nav ul.nav a:hover {
 .intro-images {
   display: flex;
   justify-content: center;
-  gap: 1em;
+  column-gap: 1rem;
   margin: 2em auto;
   max-width: 900px;
   flex-wrap: wrap;
@@ -81,10 +81,18 @@ nav ul.nav a:hover {
 }
 
 .gallery-grid img {
+  display: block;
+  width: 100vw;
+  max-width: 100%;
+  height: 200px;
   object-fit: cover;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-  transition: transform 0.2s ease;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  transition: all 0.2s ease;
+}
+
+.gallery-grid img:hover {
+  transform: scale(1.05);
 }
 
 footer a {
