client in header

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -20,4 +20,6 @@
         <a href="stuff/Mypage& Survey.htm">Crappy Webpage</a>
         ~
         <a href="tables.html">HTML Tables</a>
+        ~
+        <a href="natureinshutterspeed/">Client Project</a>
     </nav>
