--- a/itis3135/natureinshutterspeed/styles/styles.css
+++ b/itis3135/natureinshutterspeed/styles/styles.css
@@ -96,6 +96,7 @@ nav ul.nav a:hover {
 }
 
 .gallery-grid img {
+    width: 100%;
     aspect-ratio: 4 / 3;
     object-fit: cover;
     border-radius: 8px;
