--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,11 +6,13 @@
         -
         <a href="contract.html">Contract</a>
         -
-        <a href="website_evaluations.html">Website Evaluations</a>
+        <a href="website_evaluations.html">Site Reviews</a>
         -
         <a href="byo_intro.html">Byo Intro</a>
         -
         <a href="project_overview.html">Project Overview</a>
+        -
+        <a href="slideshow.html">Slideshow</a>
     </nav>
     <nav class="second-nav">
         <a href="hobby/">Hobby Page</a>
