--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,6 +13,8 @@
         <a href="project_overview.html">Project Overview</a>
         -
         <a href="slideshow.html">Slideshow</a>
+        -
+        <a href="review1.html">Review 1</a>
     </nav>
     <nav class="second-nav">
         <a href="hobby/">Hobby Page</a>
