--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,7 +6,7 @@
         -
         <a href="contract.html">Contract</a>
         -
-        <a href="website_evaluations.html">Site Reviews</a>
+        <a href="website_evaluations.html">Site Review</a>
         -
         <a href="byo_intro.html">Byo Intro</a>
         -
@@ -14,7 +14,9 @@
         -
         <a href="slideshow.html">Slideshow</a>
         -
-        <a href="review1.html">Review 1</a>
+        <a href="review1.html">Peer 1</a>
+        -
+        <a href="review2.html">Peer 2</a>
     </nav>
     <nav class="second-nav">
         <a href="hobby/">Hobby Page</a>
