--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -28,4 +28,6 @@
         <a href="tables.html">HTML Tables</a>
         ~
         <a href="natureinshutterspeed/">Client Project</a>
+        ~
+        <a href="drawing.html">Drawing</a>
     </nav>
